# Frappe-WhatsApp-Evo

./: .gitignore  README.md  license.txt  pyproject.toml
docs/superpowers/plans/: 2026-07-10-multi-line-evo-api-settings.md
docs/superpowers/specs/: 2026-07-10-multi-line-evo-api-settings-design.md
frappe_whatsapp_evo/: api.py  hooks.py  modules.txt  patches.txt
frappe_whatsapp_evo/frappe_whatsapp_evo/: api.py  client.py
frappe_whatsapp_evo/frappe_whatsapp_evo/doctype/evo_line/: evo_line.json  evo_line.py
frappe_whatsapp_evo/frappe_whatsapp_evo/doctype/evo_line_restriction/: evo_line_restriction.json  evo_line_restriction.py
frappe_whatsapp_evo/frappe_whatsapp_evo/doctype/evolution_api_settings/: evolution_api_settings.js  evolution_api_settings.json  evolution_api_settings.py  test_evolution_api_settings.py
frappe_whatsapp_evo/frappe_whatsapp_evo/doctype/whatsapp_evo_message/: whatsapp_evo_message.js  whatsapp_evo_message.json  whatsapp_evo_message.py
frappe_whatsapp_evo/frappe_whatsapp_evo/tests/: test_admin_endpoints.py  test_client.py  test_migrate_evolution_settings_patch.py  test_send.py  test_webhook.py
frappe_whatsapp_evo/frappe_whatsapp_evo/workspace/: frappe_whatsapp_evo.json
frappe_whatsapp_evo/patches/: migrate_evolution_settings_to_line.py
frappe_whatsapp_evo/public/js/: frappe_whatsapp_evo.js
